// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trailing_commas.php 1`] = `
<?php

$foo = ['foo', 'bar'];
$foo = ['foo', 'bar',];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2'];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2',];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',];
$foo = array('foo', 'bar');
$foo = array('foo', 'bar',);
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2');
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2',);
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar');
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

$foo = ['foo', 'bar'];
$foo = ['foo', 'bar'];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2'
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2'
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'
];
$foo = array('foo', 'bar');
$foo = array('foo', 'bar');
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2'
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2'
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'
);

`;

exports[`trailing_commas.php 2`] = `
<?php

$foo = ['foo', 'bar'];
$foo = ['foo', 'bar',];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2'];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2',];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',];
$foo = array('foo', 'bar');
$foo = array('foo', 'bar',);
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2');
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2',);
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar');
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

$foo = ['foo', 'bar'];
$foo = ['foo', 'bar'];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2',
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2',
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',
];
$foo = array('foo', 'bar');
$foo = array('foo', 'bar');
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2',
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2',
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',
);

`;
